feat: configurable check_interval for each monitor
